1999-01-29  Jochen Wiedmann  <joe@ispsoft.de> (0.04)

	* lib/Net/Nessus/Message.pm: Added support for NTP 1.2.
	* lib/Net/Nessus/Client.pm: Added Attack and Show* methods.
	* Added nessusc.PL as a Perl frontend; test.pl is now
	  based on it.
	* Term::ReadKey is a prerequisite now.

1998-12-21  Jochen Wiedmann  <joe@ispsoft.de> (0.02)

	* lib/Net/Nessus/Message.pm: Fixed missing 'name' attribute in
	  Net::Nessus::Message::PLUGIN_LIST.

$Id: ChangeLog,v 1.3 1999/01/29 20:18:05 joe Exp $