@@ -1,3 +1,8 @@
+1999-01-31  Jochen Wiedmann  <joe@ispsoft.de> (0.05)
+
+	* lib/Net/Nessus/Client.pm (Attack): Added the possibility
+	  to scan multiple hosts with one call.
+
 1999-01-29  Jochen Wiedmann  <joe@ispsoft.de> (0.04)
 
 	* lib/Net/Nessus/Message.pm: Added support for NTP 1.2.
@@ -11,4 +16,4 @@
 	* lib/Net/Nessus/Message.pm: Fixed missing 'name' attribute in
 	  Net::Nessus::Message::PLUGIN_LIST.
 
-$Id: ChangeLog,v 1.3 1999/01/29 20:18:05 joe Exp $
+$Id: ChangeLog,v 1.4 1999/01/31 14:03:17 joe Exp $
